--- a/src/pages/contact/contact.html
+++ b/src/pages/contact/contact.html
@@ -1,10 +1,23 @@
-<ion-header>
-  <ion-navbar>
-    <ion-title>
-      Contact
-    </ion-title>
-  </ion-navbar>
+<ion-header no-border>
+  <ion-toolbar>
+    <ion-segment>
+      <ion-segment-button>
+        EXPLAIN
+        <div class="border-sm"></div>
+      </ion-segment-button>
+      <ion-segment-button>
+        GROUP CHAT
+        <div class="border-sm"></div>
+      </ion-segment-button>
+      <ion-segment-button>
+        CONTACTS
+        <div class="border-sm"></div>
+      </ion-segment-button>
+    </ion-segment>
+  </ion-toolbar>
 </ion-header>
+
+
 
 <ion-content>
   <ion-list>
