--- a/src/pages/tabs/tabs.html
+++ b/src/pages/tabs/tabs.html
@@ -1,5 +1,6 @@
 <ion-tabs>
-  <ion-tab [root]="tab1Root" tabTitle="Home" tabIcon="home"></ion-tab>
-  <ion-tab [root]="tab2Root" tabTitle="About" tabIcon="information-circle"></ion-tab>
-  <ion-tab [root]="tab3Root" tabTitle="Contact" tabIcon="contacts"></ion-tab>
+  <ion-tab [root]="tab1Root" tabIcon="zhuye"></ion-tab>
+  <ion-tab [root]="tab2Root" tabIcon="bianqian"></ion-tab>
+  <ion-tab [root]="tab3Root" tabIcon="xinxi"></ion-tab>
+  <ion-tab [root]="tab4Root" tabIcon="lianxiren"></ion-tab>
 </ion-tabs>
